# gw2shinies-backend

./: .dockerignore  Cargo.toml  README.md  history.txt  schema.surql
.woodpecker/: package_ci.yaml  package_tag.yaml  pull_request.yaml
deploy/: Dockerfile
src/: gw2_api.rs  history_pruning.rs  history_record.rs  item_definition.rs  item_sync.rs  lib.rs  price_sync.rs
