[package]
name = "gw2shinies-backend"
version = "0.1.0"
edition = "2024"

[lib]
name = "gw2shinies_backend"
path = "src/lib.rs"

[[bin]]
name = "scraper"
path = "src/bin/scraper.rs"

[[bin]]
name = "api"
path = "src/bin/api.rs"

[dependencies]
axum = "0.8.7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
surrealdb = { version = "2.4.0", features = ["protocol-ws"] }
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = "0.7.13"
tower-http = { version = "0.6.8", features = ["cors"] }
reqwest = { version = "0.12.12", features = ["json"] }
chrono = { version = "0.4.39", features = ["serde"] }
futures = "0.3.31"
tracing-subscriber = "0.3.22"
clap = { version = "4.5.31", features = ["derive", "env"] }
rand = "0.9.2"

[dev-dependencies]
wiremock = "0.6.2"
surrealdb = { version = "2.4.0", features = ["kv-mem"] }
